--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.2",
     "react-native-web": "~0.19.10",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "react-native-screens": "3.31.1",
+    "react-native-safe-area-context": "4.10.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
