--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.1",
+    "@react-navigation/native": "^6.1.17",
     "axios": "^1.7.2",
     "expo": "~51.0.14",
     "expo-status-bar": "~1.12.1",
@@ -17,10 +18,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.2",
-    "react-native-web": "~0.19.10",
-    "tailwindcss": "^3.3.2",
+    "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-safe-area-context": "4.10.1"
+    "react-native-web": "~0.19.10",
+    "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
